--- a/public/404.html
+++ b/public/404.html
@@ -98,6 +98,21 @@
             </div>
         </div>
         <ul id="menu">
+            <li>
+                <a href="//localhost:1313/resume/" title="resume">
+                    <span>resume</span>
+                </a>
+            </li>
+            <li>
+                <a href="//localhost:1313/about-me/" title="about me">
+                    <span>about me</span>
+                </a>
+            </li>
+            <li>
+                <a href="//localhost:1313/projects/" title="projects">
+                    <span>projects</span>
+                </a>
+            </li>
         </ul>
     </nav>
 </header>
